--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -11,6 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma&display=swap">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet" />
 <style>
   * { 
@@ -1478,7 +1479,7 @@ video {
                             </div>
                         </div>
                         <div class="p-2 md:block text-left">
-                            <h2 class="text-sm font-normal font-semibold text-gray-800">Admin</h2>
+                            <h2 class="text-sm  text-gray-800">Admin</h2>
                             <p class="text-xs text-gray-500">Administrator</p>
                         </div>                
                     </button>
