--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sono:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>  
+    <script>
+      // Initialization for ES Users
+import {
+  Dropdown,
+  Ripple,
+  initTWE,
+} from "tw-elements";
+
+initTWE({ Dropdown, Ripple });
+    </script>
 <style>
 .michroma-regular{
   font-family: "Michroma", sans-serif;
@@ -31,7 +42,7 @@
 <script src="/public/countries.js"></script>
 <body>
 
-<header class="justify-between bg-slate-200">
+<header class="justify-between bg-gray-100">
     <div class="sm:px-6 lg:px-8">
       <div class="relative flex h-16 items-center justify-between">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -65,14 +76,14 @@
         data-twe-input-group-ref>
         <input
           type="search"
-          class="peer mt-5 block min-h-[auto] w-96 h-7  border border-gray-950 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-gray-950 dark:placeholder:text-gray-900 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0"
+          class="peer mt-5 block min-h-[auto] w-96 h-7  border border-gray-500 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-gray-950 dark:placeholder:text-gray-900 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0"
           placeholder="Search"
           aria-label="Search"
           id="exampleFormControlInput"
           aria-describedby="basic-addon1" />
 
         <button
-          class="my-5 mr-12 ml-2 w-16 h-7  border border-gray-950 relative z-[2] -ms-0.5 flex items-center  bg-gray-950 px-5  text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
+          class="my-5 mr-12 ml-2 w-16 h-7  border border-gray-500 relative z-[2] -ms-0.5 flex items-center  bg-black px-5  text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
           type="button"
           id="button-addon1"
           data-twe-ripple-init
@@ -91,10 +102,11 @@
             </svg>
           </span>
         </button>
-      </div>
+             </div>
+                  <a href="#" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-sm my-5 font-sans">Latest</a>
                   <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-sm my-5 font-sans">Wishlist</a>
                   <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Cart</a>
-                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">User</a>
+                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">My Account</a>
                   <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Logout</a>
                 </div>
               </div>
