--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -256,7 +256,7 @@
 
 
 <section class="text-center mt-5">
-    <button class="rounded-full h-10 text-red hover:before:bg-redborder-red-500 relative  w-40 overflow-hidden border-2 border-gray-500 bg-white px-3 text-gray-500 font-bold shadow-2xl transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-cyan-500 before:transition-all before:duration-500 hover:border-0 hover:text-white hover:shadow-red-500 hover:before:left-0 hover:before:w-full">
+    <button class="rounded-full h-10 text-red hover:before:bg-redborder-red-500 relative hover:bg-gray-500 w-40 overflow-hidden border-2 border-gray-500 bg-white px-3 text-gray-500 font-bold shadow-2xl transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-cyan-500 before:transition-all before:duration-500 hover:border-0 hover:text-white hover:shadow-red-500 hover:before:left-0 hover:before:w-full">
         <span class="relative z-10">Load More
         </span>
     </button>
@@ -432,7 +432,7 @@
 </section>
 
 <section class="text-center mt-5">
-    <button class="rounded-full h-10 text-red hover:before:bg-redborder-red-500 relative  w-40 overflow-hidden border-2 border-gray-500 bg-white px-3 text-gray-500 font-bold shadow-2xl transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-cyan-500 before:transition-all before:duration-500 hover:border-0 hover:text-white hover:shadow-red-500 hover:before:left-0 hover:before:w-full">
+    <button class="rounded-full h-10 text-red hover:before:bg-redborder-red-500 relative  w-40 overflow-hidden border-2  hover:bg-gray-500 border-gray-500 bg-white px-3 text-gray-500 font-bold shadow-2xl transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-cyan-500 before:transition-all before:duration-500 hover:border-0 hover:text-white hover:shadow-red-500 hover:before:left-0 hover:before:w-full">
         <span class="relative z-10">Load More
         </span>
     </button>
