--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loign</title>
-    <script src="https://cdn.tailwindcss.com"></script>     
+    <script src="https://cdn.tailwindcss.com"></script>  
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">   
 </head>
 <body>
 
