--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -221,7 +221,7 @@
     
 </script>
 
-<footer class="bg-white mt-12">
+<footer class="bg-gray-200 mt-12">
     <div class="mx-auto w-full max-w-screen-xl">
       <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-4">
         <div>
@@ -288,7 +288,7 @@
         </div>
     </div>
     <div class="px-4 py-6 md:flex md:items-center md:justify-between">
-        <span class=" text-gray-500 dark:text-gray-700 sm:text-center sono-regular text-xs">© 2023 <a href="https://flowbite.com/">Flowbite™</a>. All Rights Reserved.
+        <span class=" text-gray-500 dark:text-gray-700 sm:text-center sono-regular text-xs">© 2024 <a href="https://flowbite.com/">OneCart</a>. All Rights Reserved.
         </span>
         <div class="flex mt-4 sm:justify-center md:mt-0 space-x-5 rtl:space-x-reverse">
             <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-gray-950">
