--- a/views/user/userAddress.ejs
+++ b/views/user/userAddress.ejs
@@ -11,14 +11,14 @@
           </a>
     </section>
     
-    <section class="justify-start border border-gray-800 h-full w-full m-28 ">
+    <section class="justify-start border-gray-800 h-full w-full m-28 border">
       <div class="p-10">
           <div class="px-4 sm:px-0">
               <p class="mt-1 font-bold max-w-2xl text-sm leading-6 text-gray-800">Personal Address</p>
           </div>
-          <div class="mt-6 grid grid-cols-1 gap-4 sm:grid-cols-3">
+          <div class="mt-6 grid grid-cols-1 gap-4 sm:grid-cols-3 ">
               <% address.forEach( add => { %>
-              <div class="border-t border-gray-100 bg-white rounded-md shadow-md overflow-hidden">
+              <div class="border-t border-gray-100 bg-white rounded-md shadow-md overflow-hidden border border-gray-950">
                   <dl class="divide-y divide-gray-100">
                       <div class="px-4 py-6">
                           <dt class="text-sm font-medium leading-6 text-gray-900">Name</dt>
@@ -41,10 +41,19 @@
                       <div class="px-4 py-6">
                           <dt class="text-sm font-medium leading-6 text-gray-900">Address Type</dt>
                           <dd class="mt-1 text-sm leading-6 text-gray-700">Degfault</dd>
-                          <a href="/userAddress/<%= address._id %>" class="mt-1 text-sm leading-6 text-gray-700">
+                          <a href="/editAddress/<%= add.id %>" class="mt-1 text-sm leading-6 text-gray-700">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
                               <path d="m2.695 14.762-1.262 3.155a.5.5 0 0 0 .65.65l3.155-1.262a4 4 0 0 0 1.343-.886L17.5 5.501a2.121 2.121 0 0 0-3-3L3.58 13.419a4 4 0 0 0-.885 1.343Z" />
                             </svg>
+                          </a>
+                      </div>
+                      <div class="px-4 py-6">
+                      
+                          <a href="/deleteAddress/<%= add.id %>" class="mt-1 text-sm leading-6 text-gray-700">
+                            <svg xmlns="http://www.w3.org/2000/svg"  class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                              </svg>
+                              
                           </a>
                       </div>
                   </dl>
