--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1374,7 +1374,7 @@ video {
             </li>
     
             <li class="mb-1 group">
-                <a href="#" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
+                <a href="./orderManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Orders</span>
                 </a>
