--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -55,6 +55,8 @@
     </div>
   </section>
 
+  
+
   <section class=" h-14 text-center mt-3 p-4 justify-center flex">
     <hr class="w-96">
     <span class="text-gray-900 michroma-regular">TRENDING</span>
@@ -71,9 +73,13 @@
                 <!-- First Product -->
                 <% chart[0].forEach((product) => { %>
                 <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                    <div class="group-hover:scale-110 transition-all duration-300  aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                         <img src="/product_images/<%= product.productImage %>">
                     </div>
+
+
+
+                    
                     <div class="mt-4 flex justify-between">
                         <div>
                             <h3 class="text-sm text-gray-700">
@@ -265,8 +271,52 @@
     <div class="flex justify-center">
        <hr class="border-gray-600 border-1 w-8/12">
     </div>
-   
-    <section class="mt-7">
+
+
+    <section class="w-full h-80  flex justify-center items-center mt-12">
+
+      <div class="relative flex bg-clip-border  bg-white text-gray-700 shadow-md w-full max-w-[48rem] flex-row">
+        <div
+          class="relative w-2/5 m-0 overflow-hidden text-gray-700 bg-white  bg-clip-border  shrink-0">
+          <img
+            src="/images/mathilde-langevin-LdPzzJcrPLM-unsplash.jpg"
+            alt="card-image" class="object-cover w-full h-96" />
+        </div>
+        <div class="p-6">
+          <h6
+            class="block mb-4 font-sans text-base antialiased font-semibold leading-relaxed tracking-normal text-gray-700 uppercase">
+            *
+          </h6>
+          <h4 class="block mb-2 font-sans text-2xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
+            Brands
+          </h4>
+        
+          <p class="block mb-8 font-sans text-base antialiased font-normal leading-relaxed text-gray-700">
+            The immersive collection of different brands ,which are :
+            <% chart[0].forEach((product) => { %>
+            <%= product.brand %>
+          </p>
+          <% }) %>
+          <a href="#" class="inline-block"><button
+              class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-lg select-none disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none hover:bg-gray-900/10 active:bg-gray-900/20"
+              type="button">
+              Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2" class="w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
+              </svg></button></a>
+        </div>
+      </div>  
+      
+    </section>
+
+
+    <section class="mt-12 w-full h-72 bg-slate-100 text-center py-28">
+      <% chart[0].forEach((product) => { %>
+  <span class="text-xl font-bold px-32">  <%= product.brand %></span>
+  <% }) %>
+    </section>
+
+    <section class="mt-12">
         <div class="text-center">
             <span class="michroma-regular text-gray-900">BEST SELLER</span>
         </div>
@@ -275,7 +325,7 @@
                 <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                     <!-- First Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="group-hover:scale-110 transition-all duration-300 aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/361349-125-2.jpg?v=1652080344&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -293,7 +343,7 @@
                     </div>
                     <!-- Second Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/362700-51-2.jpg?v=1652080372&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -311,7 +361,7 @@
                     </div>
                     <!-- Third Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -329,7 +379,7 @@
                     </div>
                     <!-- Fourth Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/famer2052212158_q1_2-1_26f6b1d8-3197-4c2b-9230-2247b4c15689.jpg?v=1652168784&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -355,7 +405,7 @@
                 <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                     <!-- First Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket-2.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -373,7 +423,7 @@
                     </div>
                     <!-- Second Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/ragbo4535819dd2_q1_2-0_8fc35ffb-cb17-4bd0-8dba-1bf9c36588e8.jpg?v=1652168845&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -391,7 +441,7 @@
                     </div>
                     <!-- Third Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
@@ -409,7 +459,7 @@
                     </div>
                     <!-- Fourth Product -->
                     <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 group-hover:scale-110 transition-all duration-300 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/famer2052212158_q1_2-1_26f6b1d8-3197-4c2b-9230-2247b4c15689.jpg?v=1652168784&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                         </div>
                         <div class="mt-4 flex justify-between">
