--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -13,7 +13,7 @@
     <script src="https://cdn.tailwindcss.com"></script>     
 </head>
 <body>
-
+  <!-- flash comfiguration -->
   <% if (msg.length > 0)  { %>
     <div id="flashMessage" style="background-color: #f8d7da; text-align: center;  padding: 10px; font-family: 'Courier New', Courier, monospace;" class="mt-1">
         <%- msg %>
@@ -27,7 +27,6 @@
 <% } %>
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <!-- Logo if wanted -->
     <!-- <div class="text-center font-mono text-3xl font-bold">
@@ -55,11 +54,8 @@
         </div>
       </div>
      
-
-
       <div class="flex">
         <button type="submit" class="flex w-24 justify-center bg-cyan-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
-
         <a href="/home" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
       </div>
       <!-- googel authentication -->
@@ -73,7 +69,6 @@
       <a href="/signup" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Create new Account</a>
     </p>
   </div>
-
    </main>
 </body>
 </html>
