--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -1,24 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTP Verification</title>
-</head>
-<body>
-    <h1>OTP Verification</h1>
-    <form action="/verify-otp" method="post">
-        <label for="email">Enter Email:</label><br>
-        <input type="text" id="email" name="email" required><br><br>
-        <label for="otp">Enter OTP:</label><br>
-        <input type="text" id="otp" name="otp" required><br><br>
-
-        <button type="submit">Verify OTP</button>
-    </form>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,8 +13,7 @@
     <title>otp Verification</title>
 </head>
 <body>
-    
-
+    <main>
     <div class="max-w-md mx-auto border mt-52 rounded">
         <form class="shadow-md px-4 py-6" action="/verify-otp" method="post">
             <div class="flex-row gap-2 mb-6">
@@ -54,5 +32,7 @@
             </div>
         </form>
     </div>
+</main>
+
 </body>
 </html>
